Added automat porosity

--- a/shaders/lib/tools/datasets/blocks.yml
+++ b/shaders/lib/tools/datasets/blocks.yml
@@ -421,67 +421,6 @@ waxed_unoxidized_copper:
     - waxed_cut_copper
     - waxed_cut_copper_slab
     - waxed_cut_copper_stairs
-automat_translucent:
-    - blue_orchid
-    - fern
-    - grass
-    - short_grass
-    - warped_roots
-    - nether_sprouts
-    - lily_of_the_valley
-    - "large_fern:half=lower"
-    - "lilac:half=lower"
-    - "rose_bush:half=lower"
-    - "peony:half=lower"
-    - "tall_grass:half=lower"
-    - "twilightforest:fiddlehead"
-    - "twilightforest:thorn_rose"
-    - "large_fern:half=upper"
-    - "lilac:half=upper"
-    - "rose_bush:half=upper"
-    - "peony:half=upper"
-    - "tall_grass:half=upper"
-    - dandelion
-    - poppy
-    - allium
-    - azure_bluet
-    - red_tulip
-    - orange_tulip
-    - white_tulip
-    - pink_tulip
-    - oxeye_daisy
-    - cornflower
-    - wither_rose
-    - wheat
-    - crimson_roots
-    - "sunflower:half=lower"
-    - "pitcher_plant:half=lower"
-    - "sunflower:half=upper"
-    - "pitcher_plant:half=upper"
-    - "twilightforest:giant_leaves"
-    - cherry_leaves
-    - oak_leaves
-    - spruce_leaves
-    - birch_leaves
-    - jungle_leaves
-    - acacia_leaves
-    - dark_oak_leaves
-    - mangrove_leaves
-    - azalea_leaves
-    - flowering_azalea_leaves
-    - "twilightforest:beanstalk_leaves"
-    - "twilightforest:thorn_leaves"
-    - "twilightforest:twilight_oak_leaves"
-    - "twilightforest:canopy_leaves"
-    - "twilightforest:mangrove_leaves"
-    - "twilightforest:time_leaves"
-    - "twilightforest:transformation_leaves"
-    - "twilightforest:mining_leaves"
-    - "twilightforest:sorting_leaves"
-    - "twilightforest:rainbow_oak_leaves"
-    - torchflower
-    - pink_petals
-    - powder_snow
 automat_glowing:
     - beacon
     - "conduit:waterlogged=true"
@@ -568,7 +507,6 @@ automat_glowing:
     - "redstone_wire:power=1"
 automat_matte:
     - diorite
-    - grass_block
     - mushroom_stem
     - red_mushroom_block
     - sponge
@@ -743,3 +681,168 @@ automat_metallic:
     - cut_copper
     - cut_copper_slab
     - cut_copper_stairs
+automat_translucent:
+    - blue_orchid
+    - fern
+    - grass
+    - short_grass
+    - warped_roots
+    - nether_sprouts
+    - lily_of_the_valley
+    - "large_fern:half=lower"
+    - "lilac:half=lower"
+    - "rose_bush:half=lower"
+    - "peony:half=lower"
+    - "tall_grass:half=lower"
+    - "twilightforest:fiddlehead"
+    - "twilightforest:thorn_rose"
+    - "large_fern:half=upper"
+    - "lilac:half=upper"
+    - "rose_bush:half=upper"
+    - "peony:half=upper"
+    - "tall_grass:half=upper"
+    - dandelion
+    - poppy
+    - allium
+    - azure_bluet
+    - red_tulip
+    - orange_tulip
+    - white_tulip
+    - pink_tulip
+    - oxeye_daisy
+    - cornflower
+    - wither_rose
+    - wheat
+    - crimson_roots
+    - "sunflower:half=lower"
+    - "pitcher_plant:half=lower"
+    - "sunflower:half=upper"
+    - "pitcher_plant:half=upper"
+    - "twilightforest:giant_leaves"
+    - cherry_leaves
+    - oak_leaves
+    - spruce_leaves
+    - birch_leaves
+    - jungle_leaves
+    - acacia_leaves
+    - dark_oak_leaves
+    - mangrove_leaves
+    - azalea_leaves
+    - flowering_azalea_leaves
+    - "twilightforest:beanstalk_leaves"
+    - "twilightforest:thorn_leaves"
+    - "twilightforest:twilight_oak_leaves"
+    - "twilightforest:canopy_leaves"
+    - "twilightforest:mangrove_leaves"
+    - "twilightforest:time_leaves"
+    - "twilightforest:transformation_leaves"
+    - "twilightforest:mining_leaves"
+    - "twilightforest:sorting_leaves"
+    - "twilightforest:rainbow_oak_leaves"
+    - torchflower
+    - pink_petals
+    - powder_snow
+    - cobweb
+automat_somewhat_porous:
+    - "grass_block:snowy=false"
+    - podzol
+    - mycelium
+    - dirt_path
+    - coarse_dirt
+    - rooted_dirt
+    - clay
+    - gravel
+    - suspicious_gravel
+    - moss_block
+    - moss_carpet
+    - soul_soil
+    - wet_sponge
+    - honey_block
+    - sculk
+    - sculk_vein
+    - sculk_catalyst
+    - sculk_sensor
+    - calibrated_sculk_sensor
+    - sculk_shrieker
+    - target
+    - white_wool
+    - light_gray_wool
+    - gray_wool
+    - black_wool
+    - brown_wool
+    - red_wool
+    - orange_wool
+    - yellow_wool
+    - lime_wool
+    - green_wool
+    - cyan_wool
+    - light_blue_wool
+    - blue_wool
+    - purple_wool
+    - magenta_wool
+    - pink_wool
+    - white_carpet
+    - light_gray_carpet
+    - gray_carpet
+    - black_carpet
+    - brown_carpet
+    - red_carpet
+    - orange_carpet
+    - yellow_carpet
+    - lime_carpet
+    - green_carpet
+    - cyan_carpet
+    - light_blue_carpet
+    - blue_carpet
+    - purple_carpet
+    - magenta_carpet
+    - pink_carpet
+    - white_bed
+    - light_gray_bed
+    - gray_bed
+    - black_bed
+    - brown_bed
+    - red_bed
+    - orange_bed
+    - yellow_bed
+    - lime_bed
+    - green_bed
+    - cyan_bed
+    - light_blue_bed
+    - blue_bed
+    - purple_bed
+    - magenta_bed
+    - pink_bed
+    - pink_petals
+    - cobweb
+automat_very_porous:
+    - "grass_block:snowy=true"
+    - dirt
+    - farmland
+    - sand
+    - suspicious_sand
+    - red_sand
+    - snow_block
+    - snow
+    - powder_snow
+    - soul_sand
+    - sponge
+    - hay_block
+    - "conduit:waterlogged=true"
+    - "conduit:waterlogged=false"
+    - white_concrete_powder
+    - light_gray_concrete_powder
+    - gray_concrete_powder
+    - black_concrete_powder
+    - brown_concrete_powder
+    - red_concrete_powder
+    - orange_concrete_powder
+    - yellow_concrete_powder
+    - lime_concrete_powder
+    - green_concrete_powder
+    - cyan_concrete_powder
+    - light_blue_concrete_powder
+    - blue_concrete_powder
+    - purple_concrete_powder
+    - magenta_concrete_powder
+    - pink_concrete_powder
