Added freeze effect

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -74,6 +74,9 @@ variable.float.isInvisible=if(is_invisible, 1, -0.1)
 variable.float.isNotSpectator=smooth(if(isSpectator, 0, 1), 2, 0)
 uniform.float.invisibility=clamp(smooth(isInvisible * isNotSpectator, 2, 2), 0, 1)
 
+variable.float.isFreezing=if(in(isEyeInWater, 3), 1, -0.1)
+uniform.float.freezing=clamp(smooth(isFreezing * isNotSpectator, 40, 30), 0, 1)
+
 uniform.float.blindnessSmooth=smooth(blindness, 0, 0.2)
 
 # 2 * PI / 8 evaluates to 0.785398163397
