PPT_RAIN and PPT_SNOW to hardcoded numbers

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,7 +89,7 @@ uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
-uniform.float.rainWindSharp=if(in(biome_precipitation, PPT_SNOW), 0, 1)
+uniform.float.rainWindSharp=if(in(biome_precipitation, 2), 0, 1)
 uniform.float.rainWind=smooth(rainWindSharp, 4, 4)
 
 variable.float.worldDayTime=worldDay + worldTime / 24000
@@ -104,7 +104,7 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 # uniform.float.directLightMult=if(hasCeiling, 0, 1)
 
 uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
-uniform.float.rainStrengthFiltered=smooth(if(biome_precipitation == PPT_RAIN, rainStrength, 0), 5, 5)
+uniform.float.rainStrengthFiltered=smooth(if(biome_precipitation == 1, rainStrength, 0), 5, 5)
 
 # dot product of up vector and sun position
 variable.float.sunPosLen=sqrt(sunPosition.x * sunPosition.x + sunPosition.y * sunPosition.y + sunPosition.z * sunPosition.z)
