--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -59,6 +59,11 @@ blend.dh_terrain.colortex0 = ZERO ONE ONE ONE
 blend.dh_water.colortex0 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
+#if defined VOLUMETRIC_PARTICLES
+    blend.gbuffers_particles.colortex0 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
+    blend.gbuffers_particles.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
+#endif
+
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
 program.dh_shadow.enabled=false
