Prepare for DH shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,7 +66,7 @@ blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
-program.dh_shadow.enabled=false
+program.dh_shadow.enabled=DH_SHADOWS_ENABLED
 
 # shadowcomp intentionally does not exist, it acts as shadowcomp_pre since that program isn't provided by optifine
 flip.shadowcomp1.colortex1=true
@@ -188,7 +188,7 @@ screen.WEATHER.columns = 3
         screen.DIMENSION_WEATHER.columns = 1
 screen.ADVANCED = [EXPERIMENTAL] [AUTO_ADDED] [DEBUG] [PBR] <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH
     screen.DEBUG = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> DISABLE_WATER WATER_FOG 
-    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS <empty> <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD TEXTURE_FILTER_EVERYTHING
+    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> <empty> SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS <empty> <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD TEXTURE_FILTER_EVERYTHING
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
     screen.PBR = FRESNEL_MODEL GEOMETRY_MODEL DISTRIBUTION_MODEL <empty> <empty> <empty> SHADING_MODE
