--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,12 +66,9 @@ blend.dh_water.colortex1 = SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
 
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
-program.dh_shadow.enabled=DH_SHADOWS_ENABLED
+program.dh_shadow.enabled=true
 
-# shadowcomp intentionally does not exist, it acts as shadowcomp_pre since that program isn't provided by optifine
-flip.shadowcomp1.colortex1=true
-
-# flip.composite_pre.colortex4=
+flip.dh_shadow.shadowtex0=true
 
 uniform.vec4.randomVec=vec4(random(), random(), random(), random())
 
