Made nether bricks matte, added emission_only param to block IDs

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -5,7 +5,7 @@ block.1 = minecraft:water minecraft:flowing_water
 # BLOCKS_ICE_AND_AUTOMAT_SHINY
 block.2 = minecraft:ice minecraft:frosted_ice
 
-# BLOCKS_LAVA_AND_LIGHT_EMITTING_AND_AUTOMAT_GLOWING
+# BLOCKS_LAVA_AND_LIGHT_EMITTING_AND_AUTOMAT_GLOWING_AND_AUTOMAT_EMISSION_ONLY
 block.3 = minecraft:lava minecraft:flowing_lava
 
 # BLOCKS_REDSTONE
@@ -126,7 +126,7 @@ block.41 = minecraft:waxed_copper_block minecraft:waxed_cut_copper minecraft:wax
 block.42 = minecraft:sculk minecraft:sculk_vein
 
 # BLOCKS_AUTOMAT_MATTE
-block.43 = minecraft:diorite minecraft:mushroom_stem minecraft:red_mushroom_block minecraft:dead_tube_coral_block minecraft:dead_tube_coral_fan minecraft:dead_brain_coral_block minecraft:dead_brain_coral_fan minecraft:dead_bubble_coral_block minecraft:dead_bubble_coral_fan minecraft:dead_fire_coral_block minecraft:dead_fire_coral_fan minecraft:dead_horn_coral_block minecraft:dead_horn_coral_fan minecraft:white_banner minecraft:light_gray_banner minecraft:gray_banner minecraft:black_banner minecraft:brown_banner minecraft:red_banner minecraft:orange_banner minecraft:yellow_banner minecraft:lime_banner minecraft:green_banner minecraft:cyan_banner minecraft:light_blue_banner minecraft:blue_banner minecraft:purple_banner minecraft:magenta_banner minecraft:pink_banner
+block.43 = minecraft:diorite minecraft:mushroom_stem minecraft:red_mushroom_block minecraft:nether_bricks minecraft:cracked_nether_bricks minecraft:nether_brick_stairs minecraft:nether_brick_slab minecraft:nether_brick_wall minecraft:nether_brick_fence minecraft:chiseled_nether_bricks minecraft:dead_tube_coral_block minecraft:dead_tube_coral_fan minecraft:dead_brain_coral_block minecraft:dead_brain_coral_fan minecraft:dead_bubble_coral_block minecraft:dead_bubble_coral_fan minecraft:dead_fire_coral_block minecraft:dead_fire_coral_fan minecraft:dead_horn_coral_block minecraft:dead_horn_coral_fan minecraft:white_banner minecraft:light_gray_banner minecraft:gray_banner minecraft:black_banner minecraft:brown_banner minecraft:red_banner minecraft:orange_banner minecraft:yellow_banner minecraft:lime_banner minecraft:green_banner minecraft:cyan_banner minecraft:light_blue_banner minecraft:blue_banner minecraft:purple_banner minecraft:magenta_banner minecraft:pink_banner
 
 # BLOCKS_AUTOMAT_MATTE_AND_AUTOMAT_VERY_POROUS
 block.44 = minecraft:sponge
