--- a/shaders/lib/tools/datasets/blocks.yml
+++ b/shaders/lib/tools/datasets/blocks.yml
@@ -502,6 +502,8 @@ categories:
     automat_emission_only:
         - lava
         - flowing_lava
+        - fire
+        - soul_fire
     automat_matte:
         - diorite
         - mushroom_stem
