Prepare for custom clouds

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -6,6 +6,12 @@ sun=true
 moon=true
 vignette=false
 
+#if CLOUDS == 1
+    clouds=fancy
+#else
+    clouds=off
+#endif
+
 supportsColorCorrection=true
 
 backFace.solid=false 
